[package]
name = "mrshudson"
version = "0.1.0"
authors = ["Johann Fridriksson <johann.fridriksson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.5.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
